# alfred-workflows

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: unit_tests.yaml
tests/: test_monzo.py  test_text_transform.py
workflows/monzo/: monzo.alfredworkflow
workflows/monzo/src/: info.plist  monzo.py  prefs.plist
workflows/shortcuts/: shortcuts.alfredworkflow
workflows/shortcuts/src/: info.plist  shortcuts.py
workflows/store/: store.alfredworkflow
workflows/store/src/: delete.py  open.py  store.py  utils.py
workflows/text-transform/: texttransform.alfredworkflow
workflows/text-transform/src/: text_transform.py
workflows/text_transform/src/: info.plist  text_transform.py
