[tool.poetry]
name = "alfred-workflows"
version = "1.0.1"
description = ""
authors = ["Jarbton <j.barton.mail@googlemail.com>"]
readme = "README.md"
packages = [{include = "alfred_workflows"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
